--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To do list - Lista de Tarefas</title>
-    <link rel="stylesheet" href="assets/style/estilo.css">
-    <link rel="shortcut icon" href="assets/img/icone.tarefa.png" type="image/x-icon">
-    <script src="/assets/js/script.js" defer></script>
-
+    <link rel="stylesheet" href="Projeto ToDoList - JS/assets/style/estilo.css">
+    <link rel="shortcut icon" href="Projeto ToDoList - JS/assets/img/icone.tarefa.png" type="image/x-icon">
+    <script src="Projeto ToDoList - JS//assets/js/script.js" defer></script>
 </head>
 
 <body>
