--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>To do list - Lista de Tarefas</title>
     <link rel="stylesheet" href="Projeto ToDoList - JS/assets/style/estilo.css">
     <link rel="shortcut icon" href="Projeto ToDoList - JS/assets/img/icone.tarefa.png" type="image/x-icon">
-    <script src="Projeto ToDoList - JS//assets/js/script.js" defer></script>
+    <script src="Projeto ToDoList - JS/assets/js/script.js" defer></script>
 </head>
 
 <body>
